--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -196,7 +196,7 @@
             <objects>
                 <viewController id="ZA2-LO-Edl" customClass="ViewController3" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PHf-l5-Enm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MRe-eA-zxr">
@@ -233,6 +233,9 @@
                                 <state key="normal" title="Repot New Information">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <segue destination="l1B-HE-OFo" kind="show" id="JOY-YH-JRP"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jTs-ux-Pbw"/>
@@ -260,12 +263,12 @@
             </objects>
             <point key="canvasLocation" x="2485.507246376812" y="79.891304347826093"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller4-->
         <scene sceneID="TOq-we-0JK">
             <objects>
-                <viewController id="l1B-HE-OFo" sceneMemberID="viewController">
+                <viewController id="l1B-HE-OFo" customClass="ViewController4" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pdw-bY-H0C">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Report New Information" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bTu-wP-7xf">
@@ -322,6 +325,9 @@
                                 <state key="normal" title="MAP">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <segue destination="hvE-HP-9G4" kind="show" id="MFZ-bc-Vek"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qS-JT-iGK">
                                 <rect key="frame" x="197" y="504" width="20" height="27"/>
@@ -346,22 +352,33 @@
                                 <state key="normal" title="REPORT">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ZA2-LO-Edl" kind="show" id="DQI-DE-uux"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DwG-29-BpR"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Mpk-eq-4AV"/>
+                    <connections>
+                        <outlet property="extraInfoOutlet" destination="RyF-wm-qK2" id="fRE-IL-kuo"/>
+                        <outlet property="mapButtonOutlet" destination="1Hc-Bl-1Rb" id="9wF-DH-Yov"/>
+                        <outlet property="reportButtonOutlet" destination="jNV-Xl-u4B" id="ejH-jG-1Rq"/>
+                        <outlet property="roomNumberOutlet" destination="9cA-af-s6j" id="uWf-4C-wwh"/>
+                        <outlet property="threatLevelOutlet" destination="yB0-Ep-km5" id="DlN-tt-aZu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jzv-Nz-lz0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3242.0289855072465" y="79.891304347826093"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller5-->
         <scene sceneID="YTo-OC-anZ">
             <objects>
-                <viewController id="hvE-HP-9G4" sceneMemberID="viewController">
+                <viewController id="hvE-HP-9G4" customClass="ViewController5" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="b3D-qp-SGb">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="First Floor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qet-AD-oPQ">
@@ -384,22 +401,30 @@
                                 <state key="normal" title="2nd Floor">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <segue destination="zqN-Xc-XCe" kind="show" id="75m-uE-Vis"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="n4z-3F-gri"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
+                    <navigationItem key="navigationItem" id="8Gv-Wq-Rm5"/>
+                    <connections>
+                        <outlet property="floor1ScrollViewOutlet" destination="u7H-ld-rac" id="gcJ-Nr-wGL"/>
+                        <outlet property="secondFloorButtonOutlet" destination="Kfk-u1-eib" id="6zE-gi-VP4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Gt-84-xw3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3960.8695652173915" y="84.782608695652186"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller6-->
         <scene sceneID="jzw-L8-QJs">
             <objects>
-                <viewController id="zqN-Xc-XCe" sceneMemberID="viewController">
+                <viewController id="zqN-Xc-XCe" customClass="ViewController6" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EQd-84-V3z">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Second Floor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCq-uV-3RO">
@@ -422,11 +447,19 @@
                                 <state key="normal" title="1st Floor">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <segue destination="hvE-HP-9G4" kind="show" id="XgQ-QG-kuk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="CXa-hz-mQf"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Y3t-67-A0B"/>
+                    <connections>
+                        <outlet property="firstFloorButtonOutlet" destination="ZOh-gS-7Ep" id="DQh-gC-qEo"/>
+                        <outlet property="secondFloorScrollViewOutlet" destination="BcN-x8-1V8" id="E9N-Ek-JWK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z6o-bC-XXJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -451,6 +484,10 @@
             <point key="canvasLocation" x="18.840579710144929" y="79.891304347826093"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="MFZ-bc-Vek"/>
+        <segue reference="DQI-DE-uux"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
